
AM_CFLAGS = -I$(top_srcdir)/src/include -I$(top_srcdir)/src/libmrc/include
AM_CXXFLAGS = -I$(top_srcdir)/src/include -I$(top_srcdir)/src/libmrc/include

noinst_LTLIBRARIES = libsubdir.la

libsubdir_la_SOURCES = \
	psc_bnd_particles.cxx \
	psc_bnd_particles_impl.cxx \
	psc_bnd_particles_single2.cxx

EXTRA_libsubdir_la_SOURCES = \
	psc_bnd_particles_common2.cxx

