
AM_CFLAGS = -I$(top_srcdir)/src/include -I$(top_srcdir)/src/libmrc/include

noinst_LTLIBRARIES = libsubdir.la

libsubdir_la_SOURCES = \
	psc_case.c \
	psc_case_langmuir.c \
	psc_case_wakefield.c \
	psc_case_thinfoil.c \
	psc_case_foils.c \
	psc_case_curvedfoil.c \
	psc_case_singlepart.c \
	psc_case_harris.c \
	psc_case_harris_xy.c \
	psc_case_collisions.c \
	psc_case_cone.c \
	psc_case_microsphere.c \
	psc_case_photon_test.c \
	psc_case_bubble.c \
	psc_case_dynamic.c



